# Win32-network

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  ChangeLog.md  NOTICE  README.md  Win32-network.cabal  cabal.project.ci  doc-index.html  doc-index.json  index.html
.github/: CODEOWNERS
.github/workflows/: build.yml  github-page.yml
Win32-network/: System-IOManager.html  System-Win32-Async-ErrCode.html  System-Win32-Async-File.html  System-Win32-Async-IOData.html  System-Win32-Async-IOManager.html  System-Win32-Async-Internal.html  System-Win32-Async-Overlapped.html  System-Win32-Async-Socket-ByteString-Lazy.html  System-Win32-Async-Socket-ByteString.html  System-Win32-Async-Socket-Syscalls.html  System-Win32-Async-Socket.html  System-Win32-Async-WSABuf.html  System-Win32-Async.html  System-Win32-NamedPipes.html  Win32-network.haddock  doc-index.html  doc-index.json
Win32-network/src/: System.IOManager.html  System.Win32.Async.ErrCode.html  System.Win32.Async.File.html  System.Win32.Async.IOData.html  System.Win32.Async.IOManager.html  System.Win32.Async.Overlapped.html  System.Win32.Async.Socket.ByteString.Lazy.html  System.Win32.Async.Socket.ByteString.html  System.Win32.Async.Socket.Syscalls.html  System.Win32.Async.Socket.html  System.Win32.Async.WSABuf.html  System.Win32.NamedPipes.html
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.4/: Win32-network-0.1.0.0-inplace.conf  Win32-network-0.1.1.0-inplace.conf  package.cache
dist-newstyle/packagedb/ghc-8.10.7/: Win32-network-0.1.1.0-inplace.conf  Win32-network-0.1.1.1-inplace.conf  Win32-network-0.2.0.0-inplace.conf  Win32-network-0.2.0.1-inplace.conf  package.cache
scripts/: haddocs.sh
src/System/: IOManager.hs
src/System/Win32/: NamedPipes.hsc
src/System/Win32/Async/: ErrCode.hsc  IOData.hsc  IOManager.hsc  Socket.hs
src/System/Win32/Async/Socket/: ByteString.hs
src/System/Win32/Async/Socket/ByteString/: Lazy.hs
test/Test/: Generators.hs
test/Test/Async/: Handle.hs  Socket.hs
