cabal-version: 3.0

name:                   Win32-network
version:                0.1.0.0
synopsis:               Win32 network API
license:                Apache-2.0
license-files:          LICENSE NOTICE
author:                 Duncan Coutts, Marcin Szamotulski
maintainer:             duncan@well-typed.com, marcin.szamotulski@iohk.io
copyright:              2019 Input Output (Hong Kong) Ltd.
category:               System
build-type:             Simple
extra-source-files:     include/Win32-network.h

source-repository head
  type:                 git
  location:             https://github.com/haskell-works/Win32-network

flag demo
  description:  Build the named pipe demos
  default:      False

common base                       { build-depends: base                       >= 4.5        && < 5      }

common async                      { if os(windows) { build-depends: async                                                } }
common binary                     { if os(windows) { build-depends: binary                                               } }
common bytestring                 { if os(windows) { build-depends: bytestring                 >= 0.10       && < 0.11   } }
common network                    { if os(windows) { build-depends: network                    >= 3.1.2      && < 3.2    } }
common QuickCheck                 { if os(windows) { build-depends: QuickCheck                 >= 2.13.1                 } }
common quickcheck-instances       { if os(windows) { build-depends: quickcheck-instances                                 } }
common stm                        { if os(windows) { build-depends: stm                                                  } }
common tasty                      { if os(windows) { build-depends: tasty                                                } }
common tasty-hunit                { if os(windows) { build-depends: tasty-hunit                                          } }
common tasty-quickcheck           { if os(windows) { build-depends: tasty-quickcheck                                     } }
common Win32                      { if os(windows) { build-depends: Win32                      >= 2.5.4.1                } }

common Win32-network
  build-depends:        Win32-network

common project-config
  default-language:     Haskell2010

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Widentities
                        -Wredundant-constraints

library
  import:               base, project-config
                      , bytestring
                      , network
                      , Win32

  hs-source-dirs:       src

  exposed-modules:      System.IOManager

  if os(windows)
    exposed-modules:    System.Win32.NamedPipes
                        System.Win32.Async
                        System.Win32.Async.File
                        System.Win32.Async.ErrCode
                        System.Win32.Async.Socket
                        System.Win32.Async.Socket.ByteString
                        System.Win32.Async.Socket.ByteString.Lazy
                        System.Win32.Async.Internal
    other-modules:      System.Win32.Async.IOData
                        System.Win32.Async.IOManager
                        System.Win32.Async.Overlapped
                        System.Win32.Async.Socket.Syscalls
                        System.Win32.Async.WSABuf
    include-dirs:       include
    extra-libraries:    ws2_32

executable named-pipe-demo
  import:               base, project-config
                      , binary
                      , bytestring
                      , Win32
                      , Win32-network

  hs-source-dirs:       demo
  main-is:              named-pipe-demo.hs
  ghc-options:          -threaded

test-suite test
  import:               base, project-config
                      , async
                      , base
                      , binary
                      , bytestring
                      , network
                      , stm
                      , tasty
                      , tasty-hunit
                      , tasty-quickcheck
                      , QuickCheck
                      , quickcheck-instances
                      , Win32
                      , Win32-network

  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Main.hs

  if os(windows)
    other-modules:      Test.Generators
                        Test.Async.PingPong
                        Test.Async.Handle
                        Test.Async.Socket

  ghc-options:          -threaded
